<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offgray"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignUpActivity">
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/forgetpass_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@null"
                android:src="@drawable/blue_book_icon" />

            <TextView
                android:id="@+id/WelcomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgetpass_image"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/WelcomeTextView"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/background"
                    android:backgroundTint="@color/white"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/last_name_edittext"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/background"
                    android:backgroundTint="@color/white"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/l"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:text="@string/error_invalid_name_field"
                android:textColor="@color/red"
                android:visibility="gone" />

            <EditText
                android:id="@+id/email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_below="@id/l"
                android:layout_marginTop="20dp"
                android:background="@drawable/background"
                android:backgroundTint="@color/white"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_sign_up"
                android:layout_marginLeft="10dp"
                android:text="@string/error_invalid_email"
                android:textColor="@color/red"
                android:visibility="gone" />

            <EditText
                android:id="@+id/password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_below="@id/email_sign_up"
                android:layout_marginTop="20dp"
                android:background="@drawable/background"
                android:backgroundTint="@color/white"
                android:hint="@string/prompt_password"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_sign_up"
                android:layout_marginLeft="10dp"
                android:text="@string/error_invalid_password"
                android:textColor="@color/red"
                android:visibility="gone"/>

            <Spinner
                android:id="@+id/year_sign_up"
                android:layout_width="190dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_alignParentRight="true"
                android:layout_below="@id/password_sign_up"
                android:layout_marginTop="20dp"
                android:entries="@array/education_years"
                android:prompt="@string/prompt_education_year" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/password_sign_up"
                android:layout_marginTop="30dp"
                android:text="@string/select_year"
                android:textColor="@color/colorTextView"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/year_sign_up"
                android:layout_below="@id/year_sign_up"
                android:layout_marginLeft="10dp"
                android:text="@string/error_invalid_year"
                android:textColor="@color/red"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/year_sign_up"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/sec_sign_up"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/background"
                    android:backgroundTint="@color/white"
                    android:hint="@string/prompt_sec"
                    android:inputType="number"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/bn_sign_up"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_below="@id/year_sign_up"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/background"
                    android:backgroundTint="@color/white"
                    android:hint="@string/prompt_bn"
                    android:inputType="number"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/l2"
                android:layout_marginLeft="10dp"
                android:text="@string/error_invalid_sec"
                android:textColor="@color/red"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/l2"
                android:layout_marginRight="30dp"
                android:text="@string/error_invalid_bn"
                android:textColor="@color/red"
                android:visibility="gone"/>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Buttonspui"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:text="@string/action_sign_up"
                android:textStyle="bold"
                />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>